--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,5 @@
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Kumbh Sans', sans-serif;
 }
