--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --color-violet: #9e7f66;
+  --color-violet: #5964e0;
   --color-light-violet: #939bf4;
   --color-very-dark-blue: #19202d;
   --color-midnight: #121721;
