--- a/src/components/JobCard/JobCard.css
+++ b/src/components/JobCard/JobCard.css
@@ -7,6 +7,7 @@
   border-radius: 8px;
   padding: 2rem;
   gap: 0.8rem;
+  margin-bottom: 2rem;
 }
 
 .jobCard-company {
@@ -16,19 +17,18 @@
   width: 50px;
   min-height: 50px;
   border-radius: 15px;
-  background-color: #e99210;
   margin-top: -3.5rem;
+  padding: 0.2rem;
 }
 
 .jobCard-company img {
-  width: 39.98px;
-  height: 11.42px;
+  width: 85%;
 }
 
 .jobCard p {
   display: flex;
   flex-direction: row;
-  gap: 1rem;
+  gap: 0.8rem;
   margin-top: 0.5rem;
   align-items: center;
   font-weight: 400;
