--- a/src/containers/JobPosting/JobPosting.css
+++ b/src/containers/JobPosting/JobPosting.css
@@ -71,6 +71,11 @@
   color: var(--color-white);
 }
 
+.jobPosting__top button:hover {
+  cursor: pointer;
+  background-color: var(--color-light-violet);
+}
+
 .jobPosting-description {
   width: 639px;
   margin-top: 2.5rem;
@@ -103,9 +108,30 @@
   color: var(--color-dark-gray);
 }
 
-.jobPosting-role {
+.jobPosting-requirements ul {
   width: 639px;
   margin-top: 1.5rem;
+  list-style: none;
+}
+
+.jobPosting-requirements li {
+  display: flex;
+  gap: 1.5rem;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: var(--color-dark-gray);
+}
+
+.jobPosting-requirements li::before {
+  content: '•';
+  color: var(--color-violet);
+  font-size: 30px;
+}
+
+.jobPosting-role {
+  width: 639px;
+  margin-top: 2rem;
 }
 
 .jobPosting-role h3 {
@@ -121,4 +147,30 @@
   font-size: 16px;
   line-height: 26px;
   color: var(--color-dark-gray);
+}
+
+.jobPosting-role ul {
+  width: 639px;
+  margin-top: 1.5rem;
+  list-style: none;
+  counter-reset: role;
+}
+
+.jobPosting-role li {
+  display: table-row;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  counter-increment: role;
+  color: var(--color-dark-gray);
+}
+
+.jobPosting-role li::before {
+  display: table-cell;
+  width: 2rem;
+  content: counter(role);
+  color: var(--color-violet);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 26px;
 }
