Integrated switching between light and dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,6 @@
   font-family: 'Kumbh Sans', sans-serif;
 }
 
-body {
-  background-color: var(--color-light-gray);
+.App {
+  background-color: var(--bg-primary);
 }
