--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,29 @@
   --color-gray: #9daec2;
   --color-dark-gray: #6e8098;
 }
+
+.light-theme {
+  --bg-primary: var(--color-light-gray);
+  --bg-secondary: var(--color-white);
+
+  --text-primary: var(--color-very-dark-blue);
+  --text-secondary: var(--color-dark-gray);
+
+  --button-primary: rgb(89, 100, 224, 0.1);
+  --button-secondary: rgb(89, 100, 224, 0.35);
+
+  --button-text-primary: var(--color-violet);
+}
+
+.dark-theme {
+  --bg-primary: var(--color-midnight);
+  --bg-secondary: var(--color-very-dark-blue);
+
+  --text-primary: var(--color-white);
+  --text-secondary: var(--color-dark-gray);
+
+  --button-primary: rgba(48, 54, 66, 255);
+  --button-secondary: rgba(83, 88, 98, 255);
+
+  --button-text-primary: var(--color-white);
+}
